--- a/src/Zametek.Windows.AvalonDock.Core/Zametek.Windows.AvalonDock.Core.csproj
+++ b/src/Zametek.Windows.AvalonDock.Core/Zametek.Windows.AvalonDock.Core.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net8.0-windows7.0</TargetFramework>
     <UseWPF>true</UseWPF>
     <Version>0.2.0</Version>
     <RootNamespace>Zametek.Wpf.Core</RootNamespace>
@@ -16,12 +16,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dirkster.AvalonDock" Version="4.0.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Zametek.Utility" Version="2.1.0" />
+    <PackageReference Include="Dirkster.AvalonDock" Version="4.72.1" />
+    <PackageReference Include="Zametek.Utility" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
